--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,6 +8,6 @@ SystemRequirements: SVMlight
 Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071
 Depends: R (>= 2.0.0), MASS
 Description: Miscellaneous functions for classification and visualization
-         developed at the Department of Statistics, University of Dortmund
+         developed at the Fakultaet Statistik, Technische Universitaet Dortmund
 License: GPL-2
 URL: http://www.statistik.tu-dortmund.de
