--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: klaR
-Version: 0.5-6
-Date: 2008-01-16
+Version: 0.5-7
+Date: 2008-07-10
 Title: Classification and visualization
 Author: Christian Roever, Nils Raabe, Karsten Luebke, Uwe Ligges, Gero Szepannek, Marc Zentgraf
 Maintainer: Uwe Ligges <ligges@statistik.tu-dortmund.de>
 SystemRequirements: SVMlight
-Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071
+Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071, combinat
 Depends: R (>= 2.0.0), MASS
 Description: Miscellaneous functions for classification and visualization
          developed at the Fakultaet Statistik, Technische Universitaet Dortmund
