new function level_shardsplot by Dominik Reusser
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@18 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,7 +2,7 @@ import("MASS")
 
 export(b.scal, betascale, calc.trans, centerlines, classscatter, dkernel,
     drawparti, e.scal, EDAM, errormatrix, friedman.data, hmm.sop, loclda, NaiveBayes,
-    partimat, plineplot, shardsplot,
+    partimat, plineplot, shardsplot, level_shardsplot,
     quadtrafo, quadlines, quadpoints, quadplot,
     rda, nm, sknn, stepclass, svmlight, meclight, TopoS,
     tritrafo, trilines, tripoints, trigrid, triframe, triplot, triperplines,
