--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,7 +6,7 @@ export(b.scal, betascale, calc.trans, centerlines, classscatter, dkernel,
     quadtrafo, quadlines, quadpoints, quadplot,
     rda, nm, sknn, stepclass, svmlight, meclight, TopoS,
     tritrafo, trilines, tripoints, trigrid, triframe, triplot, triperplines,
-    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust)
+    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust, kmodes)
 
 S3method(NaiveBayes, formula)
 S3method(NaiveBayes, default)
@@ -60,3 +60,4 @@ S3method(predict, pvs)
 S3method(print, pvs)
 S3method(pvs, default)
 S3method(pvs, formula)
+S3method(print, kmodes)
