make R CMD check happy
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@48 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,5 @@
 import("MASS")
+importFrom("combinat", combn)
 
 export(b.scal, betascale, calc.trans, centerlines, classscatter, dkernel,
     drawparti, e.scal, EDAM, errormatrix, friedman.data, hmm.sop, loclda, NaiveBayes,
