--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: klaR
-Version: 0.6-10
-Date: 2014-02-11
+Version: 0.6-11
+Date: 2014-06-10
 Title: Classification and visualization
 Author: Christian Roever, Nils Raabe, Karsten Luebke, Uwe Ligges, Gero Szepannek, Marc Zentgraf
 Maintainer: Uwe Ligges <ligges@statistik.tu-dortmund.de>
 SystemRequirements: SVMlight
-Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071, evtree
-Depends: R (>= 2.0.0), MASS
+Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071
+Depends: R (>= 2.10.0), MASS
 Imports: combinat
 Description: Miscellaneous functions for classification and visualization
          developed at the Fakultaet Statistik, Technische Universitaet Dortmund
