new function cond.index
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@51 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,7 +1,7 @@
 import("MASS")
 importFrom("combinat", combn)
 
-export(b.scal, betascale, calc.trans, centerlines, classscatter, dkernel,
+export(b.scal, betascale, calc.trans, centerlines, classscatter, cond.index, dkernel,
     drawparti, e.scal, EDAM, errormatrix, friedman.data, hmm.sop, loclda, NaiveBayes,
     partimat, plineplot, shardsplot, level_shardsplot,
     quadtrafo, quadlines, quadpoints, quadplot,
