kmodes, woe and corclust + friends updated (cf. news)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@54 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,6 @@
 import("MASS")
 importFrom("combinat", combn)
+importFrom("questionr", wtd.table)
 
 export(b.scal, betascale, calc.trans, centerlines, classscatter, cond.index, dkernel,
     drawparti, e.scal, EDAM, errormatrix, friedman.data, hmm.sop, loclda, NaiveBayes,
@@ -7,7 +8,7 @@ export(b.scal, betascale, calc.trans, centerlines, classscatter, cond.index, dke
     quadtrafo, quadlines, quadpoints, quadplot,
     rda, nm, sknn, stepclass, svmlight, meclight, TopoS,
     tritrafo, trilines, tripoints, trigrid, triframe, triplot, triperplines,
-    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust, kmodes, woe)
+    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust, cvtree, xtractvars, kmodes, woe)
 
 S3method(NaiveBayes, formula)
 S3method(NaiveBayes, default)
@@ -67,3 +68,4 @@ S3method(print, pvs)
 S3method(pvs, default)
 S3method(pvs, formula)
 S3method(print, kmodes)
+S3method(plot, corclust)
