--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,8 +7,14 @@ Maintainer: Uwe Ligges <ligges@statistik.tu-dortmund.de>
 SystemRequirements: SVMlight
 Suggests: scatterplot3d (>= 0.3-22), som, mlbench, rpart, e1071
 Depends: R (>= 2.10.0), MASS
-Imports: combinat
+Imports: combinat, questionr
 Description: Miscellaneous functions for classification and visualization
-         developed at the Fakultaet Statistik, Technische Universitaet Dortmund
+         developed at the Fakultaet Statistik, Technische Universitaet Dortmund, 
+	 e.g. regularized discriminant analysis, sknn kernel-density naive Bayes, 
+	 an interface to svmlight and stepclass wrapper variable selection 
+   	 for supervised classification, partimat visualization of classification rules 
+         and shardsplot of cluster results as well as kmodes clustering for categorical data, 
+	 corclust variable clustering, variable extraction from different variable clustering models 
+         and weight of evidence preprocessing.
 License: GPL-2
 URL: http://www.statistik.tu-dortmund.de
