cvtree and xtractvars gain help files and are exported now
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@61 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -24,8 +24,8 @@ export(b.scal, betascale, calc.trans, centerlines, classscatter, cond.index, dke
     quadtrafo, quadlines, quadpoints, quadplot,
     rda, nm, sknn, stepclass, svmlight, meclight, TopoS,
     tritrafo, trilines, tripoints, trigrid, triframe, triplot, triperplines,
-    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust, kmodes, woe)
-#cvtree, xtractvars	
+    ucpm, benchB3, greedy.wilks, locpvs, pvs, corclust, kmodes, woe, cvtree, xtractvars)
+
 
 S3method(NaiveBayes, formula)
 S3method(NaiveBayes, default)
